tests/ui/wrong_aspyref_lifetimes.stderr
error[E0505]: cannot move out of `gil` because it is borrowed
  --> tests/ui/wrong_aspyref_lifetimes.rs:8:10
   |
5  |     let gil = Python::acquire_gil();
   |         --- binding `gil` declared here
6  |     let dict: Py<PyDict> = PyDict::new(gil.python()).into();
7  |     let dict: &PyDict = dict.as_ref(gil.python());
   |                                     ------------ borrow of `gil` occurs here
8  |     drop(gil);
   |          ^^^ move out of `gil` occurs here
9  |
10 |     let _py: Python = dict.py(); // Obtain a Python<'p> without GIL.
   |                       --------- borrow later used here
